Fixed issues with broken stylesheets

--- a/docs/css/librext-colours.css
+++ b/docs/css/librext-colours.css
@@ -66,7 +66,7 @@
 }
 
 body {
-  background-color: var(--fix-this-col-background);
+  background-color: var(--lbrxt-col-background);
 }
 .lbrxt-col-grey0 {
   color: #fdf9f0;
